# mymoney

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
_project-name/: config.yml
reports/202501/: balance_202501.html  breakdown_202501.html  transactions_202501.txt
reports/202502/: balance_202502.html  breakdown_202502.html  income_expenses_202502.html  monthly_net_202502.html  transactions_202502.csv
reports/202503/: avg_and_balance.txt  balance_202503.html  breakdown_202503.md  income_expenses_202503.html  monthly_net_202503.html  transactions_202503.csv  transactions_202503.txt
reports/2025YTD/: breakdown_2025YTD.md  transactions_2025YTD.csv
src/mymoney/: categories.py  mymoney.py  project.py
test/_2025/: cats-rule.tsv  config.yml  index.html
test/_2025/input/202501/: citi_0908.csv  one_3231.csv
test/_2025/input/202502/: citi_0908.csv  one_3231.csv
test/_2025/input/202503/: citi_0908.csv  one_3231.csv
test/_2025/input/2025YTD/: citi_0908.csv  one_3231.csv
test/_2025/reports/202501/: avg_and_balance.txt  breakdown_202501.md  income_expenses_202501.html  monthly_net_202501.html  transactions_202501.csv
test/_2025/reports/202502/: avg_and_balance.txt  breakdown_202502.md  transactions_202502.txt
test/_2025/reports/202503/: breakdown_202503.html
test/_2025/reports/2025YTD/: avg_and_balance.txt  balance_2025YTD.html  breakdown_2025YTD.html  income_expenses_2025YTD.html  monthly_net_2025YTD.html  transactions_2025YTD.txt
